--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   # F
   flutter_flavor: ^3.1.1
   flutter_mobx: ^2.0.6+5
-  mobx: ^2.0.7
+  f_logs: ^2.0.1
+  firebase_crashlytics: ^3.4.8
+  flutter_dotenv: ^5.1.0
   # G
   get_it: ^7.6.0
   # I
@@ -32,6 +34,7 @@ dependencies:
   # K
   # L
   # M
+  mobx: ^2.0.7
   # N
   # O
   # P
@@ -47,6 +50,8 @@ dependencies:
   # Y
   # Z
 
+dependency_overrides:
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -61,8 +66,9 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - .env
+  # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   fonts:
